Fix the stack construction for date operator and add test class
Add equality operator for date values

Fix fiedlInfo translation and evalutation from model to JS engine

Fix the stack construction for date operator and add test class

Fix automated model to JS variable method